projects/JavKing/css/styles.css
* {
    font-family: 'Helvetica Neueu', Helvetica, Arial, sans-serif;
    margin: 0;
    padding: 0;
    text-decoration: none;
    user-select: none;
    -moz-user-select: -moz-none;
    -khtml-user-select: none;
    -webkit-user-select: none;
}

@font-face {
    font-family: "Lato-Regular";
    src: url('polices/Lato-Regular.ttf');
}

@font-face {
    font-family: 'Righteous';
    src: url('/fonts/Righteous-Regular.ttf') format('truetype');
}

html {
    width: 100%;
    height: 100%;
}

body {
    color: black;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    width: 100%;
    background-color: #232830;
    scrollbar-width: none;
}

nav {
    background: transparent;
    /* padding: 0 15px; */
}

nav a {
    color: white;
    text-decoration: none;
}

.menu-btn {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    pointer-events: all;
    height: 40px;
    width: fit-content;
    cursor: pointer;
    margin-left: auto;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

.menu-btn__burger {
    width: 30px;
    height: 4px;
    background: #fff;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
    transition: all .5s ease-in-out;
}

.menu-btn__burger::before, .menu-btn__burger::after {
    content: '';
    position: absolute;
    width: 30px;
    height: 4px;
    background: #fff;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
    transition: all .5s ease-in-out;
}

.menu-btn__burger::before {
    transform: translateY(-10px);
}

.menu-btn__burger::after {
    transform: translateY(10px);
}

.menu-btn.open .menu-btn__burger {
    transform: translateX(50px);
    background: transparent;
    box-shadow: none;
}

.menu-btn.open .menu-btn__burger::before {
    transform: rotate(-45deg) translate(-35px, -35px);
}

.menu-btn.open .menu-btn__burger::after {
    transform: rotate(45deg) translate(-35px, 35px);
}

.menu, .submenu {
    list-style-type: none;
}

.menu, .styling {
    -webkit-transition: all 500ms ease;
    -moz-transition: all 500ms ease;
    -o-transition: all 500ms ease;
    transition: all 500ms ease;
}

.menu {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    border-radius: 0 0 5px 5px;
}

.menu li a {
    display: block;
    padding: 15px 10px;
}

.menu li.subitem a {
    padding: 15px;
}

.menu li.item.last-item {
    border-radius: 0 0 5px 5px;
}

.toggle {
    order: 1;
    font-size: 20px;
    padding: 10px 15px;
    color: #fff;
}

.toggle a {
    display: block;
    pointer-events: none;
    padding: 10px 5px !important;
}

.item.button {
    order: 2;
}

.item {
    order: 3;
    width: 100%;
    text-align: left;
    display: none;
}

.item a {
    font-family: 'Righteous';
    text-decoration: none;
}

.item a:active {
    color: #fff;
}

.item a[tabindex]:focus {
    color: #fff;
    outline: none;
}

.active .item {
    display: block;
}

.logo {
    padding: 15px 15px;
}

.circle-container {
    width: 100%;
}

.circle {
    position: fixed;
    width: 0px;
    height: 0px;
    -webkit-transition-duration: 1.5s;
    -webkit-transition-property: all;
    -webkit-transition-timing-function: ease-in-out;
    background: #232830;
    text-align: left;
    align-items: center;
    color: white;
    border-radius: 40%;
    padding: 20px;
    flex: 1;
    overflow: hidden;
    opacity: 0;
}

.circle.expand {
    opacity: 1;
    top: -20%;
    left: -20%;
    width: 150%;
    height: 150%;
    z-index: 1002;
}

.logo img {
    width: 48px;
    /* padding: 7.5px 10px 7.5px 10px; */
}

.item.button {
    padding: 9px 5px;
}

.item:not(.button) a:hover, .item a:hover::after {
    color: #ccc;
}

.active {
    background: #111;
    height: 0px;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    overflow: hidden;
}

.menu.active {
    height: fit-content;
    width: 100%;
}

.active .item {
    display: block;
    /* background: #222; */
}

.button.secondary {
    /* solid line between item orders */
    /* border-bottom: 1px #444 solid; */
}

.submenu {
    display: none;
}

.submenu-active {
    background-color: #111 !important;
}

.submenu-active .submenu {
    display: block;
    background: #111;
}

.has-submenu>a::after {
    font-family: "Font Awesome 5 Free";
    font-size: 12px;
    line-height: 16px;
    font-weight: 900;
    color: white;
    content: "\f078";
    padding-left: 5px;
}

.has-submenu i {
    font-size: 12px;
}

.subitem a {
    padding: 10px 15px;
    background-color: #111;
}

.submenu-active {
    background-color: #111;
    border-radius: 3px;
}

h1 {
    margin: 10px 0 10px;
}

h3 {
    margin: 10px 0 15px;
}

body::-webkit-scrollbar {
    /* This is the magic bit for WebKit */
    display: none;
}

a:hover, a:focus {
    color: inherit;
}

@keyframes float {
    0% {
        /* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
        transform: translatey(0px);
    }
    50% {
        /* box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2); */
        transform: translatey(-20px);
    }
    100% {
        /* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
        transform: translatey(0px);
    }
}

.bigavatar {
    width: 300px;
    /* border-radius: 50%; */
    /* border: 5px #FF015B solid; */
    /* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
    box-shadow: none;
    transform: translatey(0px);
    display: block;
    margin: auto;
    animation: float 6s ease-in-out infinite;
    overflow: hidden;
}

.toptext h1 span {
    color: #ddaedb;
    font: 700 48px Times New Roman, Times, serif;
    font-family: 'Righteous';
    letter-spacing: 2px;
    font-size: 50px;
}
/* ... */

